# Sense

./: .gitignore  .gitmodules  README.md
backend/: Cargo.toml
backend/scripts/: test_dreamcatcher.sh
backend/src/: main.rs
backend/src/backend/: api.rs  chain_of_thought.rs  mod.rs
dreamcatcher-frontend/: index.html  package-lock.json  package.json
dreamcatcher-frontend/src/: App.tsx  index.css
dreamcatcher-frontend/src/components/background/: DreamyBackground.tsx
dreamcatcher-frontend/src/components/dream/: DreamModal.tsx  DreamResult.tsx  DreamSteps.tsx  DreamVisualisation.tsx  HeroSection.tsx
dreamcatcher-frontend/src/components/layout/: Header.tsx
dreamcatcher-frontend/src/context/: DreamContext.tsx
dreamcatcher-frontend/src/services/: api.ts
sense721/: .env.example  foundry.toml
sense721/script/: DeployDreamNFT.s.sol
sense721/src/: DreamNFT.sol
sense721/test/: Counter.t.sol
