[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
alith = "0.4.3"
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = "0.4.40"
hex = "0.4.3"
rand = "0.9.0"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
uuid = "1.16.0"
